--- a/src/components/TicketItem/TicketItem.module.scss
+++ b/src/components/TicketItem/TicketItem.module.scss
@@ -27,6 +27,10 @@
   &__airline {
     width: 30%;
 
+    @media screen and (width < 380px) {
+      width: auto;
+    }
+
     & span {
       height: 40px;
       display: block;
@@ -54,11 +58,19 @@
   &__table th {
     font-size: 12px;
     color: #a0b0b9;
+
+    @media screen and (width < 380px) {
+      font-size: 11px;
+    }
   }
 
   &__table td {
     font-size: 14px;
     color: #4a4a4a;
     text-transform: none;
+
+    @media screen and (width < 380px) {
+      font-size: 12px;
+    }
   }
 }
